hphp/hack/test/typecheck/iface_require_incompat4.php.exp
File "iface_require_incompat4.php", line 19, characters 39-40:
Unable to satisfy trait/interface requirement (Typing[4110])
  File "iface_require_incompat4.php", line 12, characters 25-29:
  Expected `float`
  File "iface_require_incompat4.php", line 12, characters 25-29:
  This type argument to `Super` must match exactly (it is invariant)
  File "iface_require_incompat4.php", line 19, characters 23-25:
  But got `int`
